--- a/src/Pages/Home/Services/Services.css
+++ b/src/Pages/Home/Services/Services.css
@@ -9,6 +9,23 @@
     grid-gap: 20px;
 }
 
+/* 
+there we doing some media querise
+*/
+@media only screen and (max-width:576px) {
+    .services-container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+@media only screen and (min-width:577px) and (max-width:992px) {
+    .services-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+}
+
 .services-container img {
     width: 65%;
+    align-items: center;
 }
